finished about us / fixed trips page

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -68,7 +68,7 @@
       <div>
       <!-- upload photo, description, like photo -->
         <% @pictures.each do |p| %>
-            <div class="card large">
+            <div class="card large">bru
               <div class="card-image">
                 <%= image_tag p.picture.url %>
                 <span class="card-title"><%= p.description %></span>
@@ -115,7 +115,7 @@
 
       <div>
       <!-- Cost table, add associated cost -->
-        <h3>Costs Associated with This Place:</h3>
+        <h5>Costs Associated with This Place:</h5>
         <table>
           <tr>
             <th>Category</th>
