--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,11 +14,6 @@
   <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
 
   <style type="text/css">
-/*    
-      #navbarrr{
-        position: fixed;
-        width: 100%;
-      }*/
       nav{
         margin-top: 0px;
         position: fixed;
@@ -38,7 +33,8 @@
         position: fixed;
       }
       #container{
-        width: 880px;
+        width: 800px;
+        text-align: center;
         display: inline-block;
       }
       .profileLocation{
@@ -67,7 +63,7 @@
       #map{
         height: 100%;
         width: 560px;
-        border: 1px solid black;
+        border: 1px solid #5F9EA0;
         display: inline-block;
         vertical-align: top;
         /*background-color: transparent;*/
@@ -77,13 +73,14 @@
         padding: 0px 20px ;
         display: inline-block;
         width: 700px;
+        text-align: center;
         vertical-align: top;
       }
       .trips{
-        border: 1px solid black;
+        border: 3px solid #5F9EA0;
         height: 200px;
         width: 400px;
-        margin: 50px 40px 50px 220px;
+        margin: 30px 40px 50px 140px;
         text-align: center;
         padding:40px 25px;
       }
@@ -109,31 +106,34 @@
       .favorites{
         height:100px;
         width: 200px;
-        border: 1px solid black;
+        border: 3px solid #5F9EA0;
         padding: 15px;
         content-align: center;
-        margin: 10px 40px 10px 335px;
+        margin: 20px 40px 30px 300px;
       }
       #wrapIt{
         margin-top: 64px;
+      }
+      .cities {
+        text-transform: uppercase;
+      }
+      .header {
+        position: relative;
+        margin-top: -300px;
       }
   </style>
 
 </head>
 <body>
-
-
   <nav>
     <div class="nav-wrapper ">
-      <a href="/" class="brand-logo">Compass</a>
+      <a href="/" class="brand-logo">Welcome, <%= current_user.first_name %>!</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="/trips/new">Create a Trip</a></li>
         <li><a href="/sessions/<%=params[:id]%>" data-method='delete'>Logout</a></li>
       </ul>
     </div>
   </nav>
-
-
 
 <div class="mui-container-fluid">
 
@@ -144,26 +144,27 @@
       <img class="profileLocation" src="/assets/newyork.jpg">
     </div>
 
+      <div id="header">
+      <h5>A definitive guide of the best local spots, as told by you! </h5>
+      </div>
+
       <div class="favorites">
-        <p style="text-align: center"><i class="material-icons prefix">loyalty</i> Favorites: <%= @likes %> </p>  
+        <p style="text-align: center"><i class="material-icons prefix">loyalty</i> Favorite Trips: <%= @likes %> </p>  
         <p style="text-align: center"><i class="material-icons prefix">perm_contact_calendar</i> Places Visited: <%= @UT.count %></p> 
       </div>
 
     <div class="usersList">
-      <h3>Hey, <%= current_user.first_name %>!!</h3>
-
       <% if @UT.length == 0 %>
 
         <h3>Add trips to share with friends!</h3>
 
       <% else %>
 
-        <h4>Here are the cities you've visited</h4>
-        <h5>A definitive guide of the best local spots, as told by you! </h5>
+        <h4>You've visted these cities so far:</h4>
 
         <% @UT.each do | u | %>
           <div class="trips">
-            <a href="/trips/<%=u.id%>"><h3><%= u.destination %></h3></a>
+            <a href="/trips/<%=u.id%>"><h3 class="cities"><%= u.destination %></h3></a>
             <p><%= u.description %></p>
           </div>
         <% end %>
