--- a/app/assets/stylesheets/trips.scss
+++ b/app/assets/stylesheets/trips.scss
@@ -3,7 +3,7 @@
 ============================================================ */
 .container {
   max-width: 960px;
-  margin: 0 auto;
+  text-align: center;
 }
 * {
  margin: 0;
@@ -17,8 +17,30 @@ h3 {
 	color: #5F9EA0;
 	font-family: 'Comfortaa', cursive;
 }
-.card {
-  
+table, th, tr, td {
+  text-align: center;
+  font-size: 1.2em;
+}
+th {
+  font-weight: bolder;
+  color: #5F9EA0;
+}
+.bold {
+  font-weight: bolder;
+  color: #5F9EA0;
+  text-transform: uppercase;
+}
+#comment {
+  width: 500px;
+  color: #d3d3d3;
+}
+.place_form {
+  width: 500px;
+}
+#place_table {
+  width: 400px;
+  text-align: center;
+  margin-left: 250px;
 }
 /* ============================================================
   SECTIONS
@@ -55,6 +77,7 @@ section.module.parallax h1 {
   font-size: 48px;
   line-height: 200px;
   font-weight: 700;
+  margin-top: 100px;
   text-align: center;
   text-transform: uppercase;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
