--- a/app/views/users/about.html.erb
+++ b/app/views/users/about.html.erb
@@ -5,14 +5,18 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
-
+<style type="text/css">
+	body {
+		background-color: white;
+	}
+</style>
 </head>
 <body>
 
 <section class="module content">
   <div class="container">
 
-HELLO
+<img src="/assets/about.png" alt="About Us" style="width:100%">
 
 <div class = "container">
   </table>
