fixed date modal for create trip page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -56,7 +56,6 @@
         width: 560px;
         display: inline-block;
         vertical-align: baseline;
-        /*background-color: transparent;*/
         position: fixed;
        
       }
@@ -66,7 +65,6 @@
         border: 1px solid #5F9EA0;
         display: inline-block;
         vertical-align: top;
-        /*background-color: transparent;*/
         position: absolute;
       }
       .usersList{
@@ -206,7 +204,7 @@
        
          var mapDiv = document.getElementById('map');
          var map = new google.maps.Map(mapDiv, {
-          center: {lat: -34.397, lng: 150.644},
+          center: {lat: 10.7128830197085, lng: -30.96263788029151},
            zoom: 2
          });
        }
