--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -25,6 +25,9 @@
   .container{
     padding: 50px;
   }
+  a:hover {
+    text-decoration: none;
+  }
 
 </style>
 
@@ -34,7 +37,7 @@
     <div class="nav-wrapper ">
       <a href="/" class="brand-logo">Compass</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="/trips/new">Create a Trip</a></li>
+        <li><a href="/trips/new" class="">Create a Trip</a></li>
         <li><a href="/sessions/<%=params[:id]%>" data-method='delete'>Logout</a></li>
       </ul>
     </div>
