--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -11,11 +11,20 @@
     selectMonths: true, // Creates a dropdown to control month
     selectYears: 15 // Creates a dropdown of 15 years to control year
   });
-
   });
   </script>
 
 <style type="text/css">
+
+    nav{
+        margin-top: -600px;
+        position: fixed;
+        background-color: #5F9EA0;
+        z-index: 99;
+        position:absolute;
+      }
+
+
 /* ============================================================
   PRIMARY STRUCTURE
 ============================================================ */
@@ -96,6 +105,18 @@ section.module.parallax-3 {
 
 </head>
 <body>
+
+  <nav>
+    <div class="nav-wrapper ">
+      <a href="/" class="brand-logo">Compass</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="/users/<%=current_user.id%>">My Compass</a></li>
+        <li><a href="/sessions/<%=params[:id]%>" data-method='delete'>Logout</a></li>
+      </ul>
+    </div>
+  </nav>
+
+
 
 <section class="module parallax parallax-1">
   <div class="container">
