--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -1,2 +1,176 @@
-<h1>Trips#edit</h1>
-<p>Find me in app/views/trips/edit.html.erb</p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
+    <script type="text/javascript">
+  $(document).ready(function() {
+    $('.datepicker').pickadate({
+    selectMonths: true, // Creates a dropdown to control month
+    selectYears: 15 // Creates a dropdown of 15 years to control year
+  });
+  });
+  </script>
+
+<style type="text/css">
+
+    nav{
+        margin-top: -600px;
+        position: fixed;
+        background-color: #5F9EA0;
+        z-index: 99;
+        position:absolute;
+      }
+
+
+/* ============================================================
+  PRIMARY STRUCTURE
+============================================================ */
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+/* ============================================================
+  SECTIONS
+============================================================ */
+section.module:last-child {
+  margin-bottom: 0;
+}
+section.module h2 {
+  margin-bottom: 40px;
+  font-family: "Roboto Slab", serif;
+  font-size: 30px;
+}
+section.module p {
+  margin-bottom: 40px;
+  font-size: 16px;
+  font-weight: 300;
+}
+section.module p:last-child {
+  margin-bottom: 0;
+}
+section.module.content {
+  padding: 40px 0;
+}
+section.module.parallax {
+  padding: 240px 0;
+  background-position: 0 0;
+}
+section.module.parallax h1 {
+  color: #1e1e1e;
+  font-size: 48px;
+  line-height: 1;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+  text-shadow: 0 0 10px white;
+}
+section.module.parallax-1 {
+  background-image: url("/assets/sandiego.jpg");
+}
+section.module.parallax-2 {
+  background-image: url("/assets/london.jpg");
+}
+section.module.parallax-3 {
+  background-image: url("/assets/seattle.jpg");
+}
+
+@media all and (min-width: 600px) {
+  section.module h2 {
+    font-size: 42px;
+  }
+  section.module p {
+    font-size: 20px;
+  }
+  section.module.parallax {
+    padding: 300px 0;
+  }
+  section.module.parallax h1 {
+    font-size: 96px;
+  }
+}
+@media all and (min-width: 960px) {
+  section.module.parallax h1 {
+    font-size: 160px;
+  }
+}
+
+
+
+</style>
+
+
+</head>
+<body>
+
+  <nav>
+    <div class="nav-wrapper ">
+      <a href="/" class="brand-logo">Compass</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="/users/<%=current_user.id%>">My Compass</a></li>
+        <li><a href="/sessions/<%=params[:id]%>" data-method='delete'>Logout</a></li>
+      </ul>
+    </div>
+  </nav>
+
+
+
+<section class="module parallax parallax-1">
+  <div class="container">
+    <h1></h1>
+  </div>
+</section>
+
+<section class="module content">
+  <div class="container">
+<center>
+      <h3>Edit Your Trip</h3>
+        <div class="row">
+          <form class="col s12" action="/trips/<%= @trip.id %>" method="POST">
+            <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
+            <input name="_method" value="patch" type="hidden">
+            <div class="container">
+            <div class="row">
+              <div class="input-field col s12">
+                <i class="material-icons prefix">language</i>
+                <input name="trip[destination]"id="icon_prefix" type="text" class="validate" value = "<%= @trip.destination %>">
+                <label for="icon_prefix">Destination</label>
+              </div><br>
+              <div class="input-field col s12">
+                <i class="material-icons prefix">mode_edit</i>
+                <input name="trip[description]"id="icon_telephone" type="tel" class="validate"value = "<%= @trip.description %>">
+                <label for="icon_telephone">Description</label>
+              </div>
+
+              <div class="input-field col s12">
+                <i class="material-icons prefix">perm_contact_calendar</i>
+                <input name="trip[start_date]" id="date" type="date" class="datepicker"value = "<%= @trip.start_date %>">
+                <label for="date">Start Date</label>
+              </div>
+
+              <div class="input-field col s12">
+                <i class="material-icons prefix">perm_contact_calendar</i>
+                <input name="trip[end_date]" id="date2" type="date" class="datepicker"value = "<%= @trip.end_date %>">
+                <label for="date2">End Date</label>
+              </div>
+
+
+            </div>
+            </div>
+            <button type="submit" class="waves-effect waves-light btn-large">Create Your Trip</button>
+          </form>
+        </div>
+  </div>
+</section>
+
+<section class="module parallax parallax-2">
+  <div class="container">
+
+  </div>
+</section>
+
+</body>
+</html>
